--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,5 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java,gradle,macos,windows
+
+*.bin
