--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,31 +1,31 @@
-spring:
-  datasource:
-    url: jdbc:mariadb://localhost:3306/graduateam
-    username: graduateam
-    password: "graduateam!"
-    driver-class-name: org.mariadb.jdbc.Driver
-  jpa:
-#    open-in-view: false
-    hibernate:
-      ddl-auto: create  # 개발중에는, create, 배포시에는, update 나 none으로 설정 변경
-    show-sql: true  # sql 포멧팅 활성화
-  logging:
-    level:
-      org.springframework: DEBUG # 배포시에는, INFO로 설정 변경
+  spring:
+    datasource:
+      url: jdbc:mariadb://localhost:3306/graduateam
+      username: graduateam
+      password: "graduateam!"
+      driver-class-name: org.mariadb.jdbc.Driver
+    jpa:
+  #    open-in-view: false
+      hibernate:
+        ddl-auto: create  # 개발중에는, create, 배포시에는, update 나 none으로 설정 변경
+      show-sql: true  # sql 포멧팅 활성화
+    logging:
+      level:
+        org.springframework: DEBUG # 배포시에는, INFO로 설정 변경
 
-  security:
-    user:
-      name: admin
-      password: password
-      roles: admin
+    security:
+      user:
+        name: admin
+        password: password
+        roles: admin
 
-  springdoc:
-    api-docs:
-      path: /api-docs
-      enabled: true
-    swagger-ui:
-      path: /swagger-ui.html
-      operations-sorter: method
-      tags-sorter: alpha
-      url: /api-docs
-    packages-to-scan: com.myproject.graduation
+    springdoc:
+      swagger-ui:
+        path: /swagger-ui.html
+        operations-sorter: method
+        tags-sorter: alpha
+#        url: /api-docs
+      api-docs:
+        path: /v3/api-docs
+        enabled: true
+      packages-to-scan: com.myproject.graduation
