--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,12 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/graduateam
+    url: jdbc:mariadb://localhost:3306/graduateam  # localhost 대신 127.0.0.1 사용
     username: graduateam
     password: graduateam!
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
+    database-platform: org.hibernate.dialect.MariaDB103Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
   logging:
     level:
