--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,56 +1,50 @@
-name: CI Pipeline
+name: Spring Boot CI Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main, develop ]
   pull_request:
-    branches:
-      - main
+    branches: [ main, develop ]
 
 jobs:
-  build:
+  build-test:
     runs-on: ubuntu-latest
-
-    services:
-      mariadb:
-        image: mariadb:11.7
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: graduateam
-          MYSQL_USER: graduateam
-          MYSQL_PASSWORD: graduateam!
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping -h 127.0.0.1 -ugraduateam -pgraduateam!" --health-interval=10s --health-timeout=5s --health-retries=5
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Wait for MariaDB to be ready
-        run: |
-          for i in {1..30}; do
-            nc -z localhost 3306 && echo "MariaDB is up" && exit 0
-            echo "Waiting for MariaDB..."
-            sleep 2
-          done
-          echo "MariaDB did not start in time" && exit 1
-
-      - name: Check MariaDB status
-        run: docker ps -a
-
-      - name: Check MariaDB logs
-        run: docker logs $(docker ps -q --filter ancestor=mariadb:11.7)
-
-      - name: Grant execute permission for Gradle
-        run: chmod +x gradlew
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
       - name: Build with Gradle
         run: ./gradlew build --no-daemon
+
+      - name: Upload test reports
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-reports
+          path: build/reports/tests/test/
+
+  dependency-submission:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
