--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,8 @@
         path: /v3/api-docs
         enabled: true
       packages-to-scan: com.myproject.graduation
+
+      flask:
+        api:
+          # Flask 서버 URL
+          url: http://localhost:5000
